--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,6 +44,7 @@ html, body {
 }
 
 #__next {
+  width: 100%;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -51,4 +52,14 @@ html, body {
 
 .main-content {
   flex: 1;
+}
+
+@media (max-width: 750px) {
+  .navigation-links {
+    display: none;
+  }
+
+  .menu-button {
+    display: block;
+  }
 }
