--- a/src/styles/blogpost.module.css
+++ b/src/styles/blogpost.module.css
@@ -1,20 +1,65 @@
 .blogPost {
+  display: flex;
+  flex-direction: column;
   border: 1px solid #ccc;
   border-radius: 8px;
   overflow: hidden;
   transition: box-shadow 0.3s;
   cursor: pointer;
+  margin-bottom: 20px;
+  min-height: 500px;
+  height: auto;
 }
 
 .blogPost:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.thumbnail {
+.thumbnailContainer {
   width: 100%;
-  display: block;
+  height: 200px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: -5px;
+  border-bottom: 1px solid rgb(221, 220, 220);
+}
+
+.thumbnail {
+  width: auto;
+  height: 200px;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
 }
 
 .content {
   padding: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  position: relative;
+  height: calc(100% - 200px);
+}
+
+.title {
+  font-size: 1em;
+  margin-bottom: 8px;
+  margin-top: 0;
+}
+
+.tags,
+.authors {
+  font-size: 0.8em;
+  margin: 4px 0;
+}
+
+.lastEdited {
+  font-size: 0.7em;
+  margin-top: auto;
+  align-self: flex-end;
+  position: absolute;
+  right: 16px;
+  bottom: 4px;
 }
