:bug: fix: the bug in the blogpost page
resolve issue where certain information was not displayed

--- a/src/styles/blogpost.module.css
+++ b/src/styles/blogpost.module.css
@@ -9,10 +9,11 @@
   margin-bottom: 20px;
   min-height: 500px;
   height: auto;
+  transition: transform 0.3s ease;
 }
 
 .blogPost:hover {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transform: scale(1.05);
 }
 
 .thumbnailContainer {
