--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -48,6 +48,24 @@ a {
   text-decoration: none;
 }
 
+ol {
+  padding-left: 20px;
+}
+
+ul {
+  margin-top: 0px;
+  padding-left: 20px;
+}
+
+li {
+  margin-bottom: 5px;
+}
+
+h2 {
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+
 nav ul {
   list-style: none;
   padding: 0;
