--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,7 @@
   --background-color: #FFFFFF;
   --button-bg-color: #ff8809;
   --button-hover-bg-color: #be6c15;
-  --link-color: #0000EE;
+  --link-color: #0D0DEE;
   --link-hover-color: #FF4500;
   --box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   --input-border-color: #BEBEBE;
@@ -28,6 +28,13 @@
   --footer-text-color: #535252;
 }
 
+@font-face {
+  font-family: 'MyFont';
+  src: url('/fonts/fontawesome-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -37,11 +44,11 @@ body {
 }
 
 html[lang="en"] body {
-  font-family: Meiryo, "Hiragino Kaku Gothic ProN";
+  font-family: 'MyFont', Meiryo, "Segoe UI", "Hiragino Kaku Gothic ProN";
 }
 
 html[lang="ja"] body {
-  font-family: Meiryo, "Hiragino Kaku Gothic ProN";
+  font-family: 'MyFont', Meiryo, "Segoe UI", "Hiragino Kaku Gothic ProN";
 }
 
 a {
@@ -63,8 +70,13 @@ li {
   margin-bottom: 15px;
 }
 
+h1 {
+  margin-top: 0px;
+  font-size: 2.2em;
+}
+
 h2 {
-  margin-top: 30px;
+  margin-top: 35px;
   margin-bottom: 5px;
 }
 
