--- a/src/styles/layout.module.css
+++ b/src/styles/layout.module.css
@@ -4,3 +4,8 @@
   background-color: var(--background-color);
   padding-top: 5px !important;
 }
+
+.layoutGrid {
+  display: grid;
+  grid-gap: 10px;
+}
