--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,7 +6,7 @@
   --link-color: #2753E1;
   --link-hover-color: #FF4500;
   --box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  --input-border-color: #BEBEBE;
+  --input-border-color: #dedede;
   --input-hover-border-color: #212121;
   --placeholder-color: #757575;
   --header-color: #007B59;
@@ -22,7 +22,7 @@
   --link-color: #81b1d2;
   --link-hover-color: #fa8174;
   --box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.15);
-  --input-border-color: #5F6367;
+  --input-border-color: #404040;
   --input-hover-border-color: #CCCCCC;
   --placeholder-color: #B2B2B2;
   --header-color: #005a42;
@@ -120,6 +120,15 @@ html, body {
 
 .main-content {
   flex: 1;
+}
+
+.horizontal-line {
+  margin-top: 0px;
+  margin-bottom: 10px;
+  margin-left: 0px;
+  width: 100%;
+  height: 1px;
+  background-color: var(--input-border-color);
 }
 
 @media (max-width: 600px) {
