--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,7 +9,7 @@
   --input-border-color: #dedede;
   --input-hover-border-color: #212121;
   --placeholder-color: #757575;
-  --header-color: #007B59;
+  --main-color: #007B59;
   --footer-text-color: #a9a9a9;
   --drawer-icon-color: #757575;
 }
@@ -25,7 +25,7 @@
   --input-border-color: #404040;
   --input-hover-border-color: #CCCCCC;
   --placeholder-color: #B2B2B2;
-  --header-color: #005a42;
+  --main-color: #005a42;
   --footer-text-color: #535252;
   --drawer-icon-color: #d4d4d4;
 }
@@ -129,6 +129,10 @@ html, body {
   width: 100%;
   height: 1px;
   background-color: var(--input-border-color);
+}
+
+.pre-wrap {
+  white-space: pre-wrap;
 }
 
 @media (max-width: 600px) {
