--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,51 +30,21 @@
   --drawer-icon-color: #d4d4d4;
 }
 
-@font-face {
-  font-family: 'MyFont';
-  src: url('/fonts/fontawesome-webfont.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-
 body {
   margin: 0;
   padding: 0;
   color: var(--text-color);
   background-color: var(--background-color);
   font-size: 14.5px;
+  line-height: 1.4;
 }
 
 html[lang="en"] body {
-  font-family: 'MyFont', Meiryo, "Segoe UI", "Hiragino Kaku Gothic ProN";
+  font-family: Meiryo, "Segoe UI", "Hiragino Kaku Gothic ProN";
 }
 
 html[lang="ja"] body {
-  font-family: 'MyFont', Meiryo, "Segoe UI", "Hiragino Kaku Gothic ProN";
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-ol {
-  padding-left: 20px;
-}
-
-ul {
-  margin-top: 0px;
-  margin-bottom: 25px;
-  padding-left: 20px;
-}
-
-ul.no-bullets {
-  list-style-type: none; /* 点を非表示にする */
-  padding-left: 10px; /* 通常の箇条書きによって追加される左側のパディングを取り除く */
-}
-
-li {
-  margin-bottom: 8px;
+  font-family: Meiryo, "Segoe UI", "Hiragino Kaku Gothic ProN";
 }
 
 h1 {
@@ -88,14 +58,21 @@ h2 {
   margin-bottom: 5px;
 }
 
-nav ul {
-  list-style: none;
-  padding: 0;
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
-nav ul li {
-  display: inline;
-  margin-right: 20px;
+ul {
+  margin-top: 0px;
+  margin-bottom: 25px;
+  padding-left: 20px;
+}
+
+li {
+  margin-top: 0px;
+  margin-bottom: 8px;
 }
 
 footer {
@@ -137,11 +114,12 @@ html, body {
 }
 
 .custom-list {
-  padding: 0;
+  margin-bottom: -7px;
 }
 
 .custom-list > li {
-  margin-bottom: 5px;
+  margin-top: 0px;
+  margin-bottom: 6px;
   display: block;
 }
 
@@ -149,12 +127,17 @@ html, body {
   content: attr(data-marker) ": ";
 }
 
-.custom-list li ul {
+.custom-nested-list {
   padding-left: 20px;
   margin-top: 0px;
   margin-bottom: 0px;
   margin-left: 10px;
   list-style: disc;
+}
+
+.custom-nested-list li {
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 @media (max-width: 600px) {
