--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,33 +1,35 @@
 :root {
   --text-color: #323232;
   --background-color: #FFFFFF;
-  --button-bg-color: #ff8809;
-  --button-hover-bg-color: #be6c15;
+  --button-bg-color: #FF8809;
+  --button-hover-bg-color: #BE6C15;
   --link-color: #2753E1;
   --link-hover-color: #FF4500;
   --box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  --input-border-color: #dedede;
+  --input-border-color: #DEDEDE;
   --input-hover-border-color: #212121;
   --placeholder-color: #757575;
   --main-color: #007B59;
-  --footer-text-color: #a9a9a9;
+  --footer-text-color: #A9A9A9;
   --drawer-icon-color: #757575;
+  --highlight-color: #D72727;
 }
 
 [data-theme="dark"] {
-  --text-color: #d4d4d4;
+  --text-color: #D4D4D4;
   --background-color: #191919;
-  --button-bg-color: #be6c15;
+  --button-bg-color: #BE6C15;
   --button-hover-bg-color: #9e520e;
-  --link-color: #81b1d2;
-  --link-hover-color: #fa8174;
+  --link-color: #81B1D2;
+  --link-hover-color: #FA8174;
   --box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.15);
   --input-border-color: #404040;
   --input-hover-border-color: #CCCCCC;
   --placeholder-color: #B2B2B2;
-  --main-color: #005a42;
+  --main-color: #005A42;
   --footer-text-color: #535252;
-  --drawer-icon-color: #d4d4d4;
+  --drawer-icon-color: #D4D4D4;
+  --highlight-color: #df4545;
 }
 
 body {
@@ -138,6 +140,11 @@ html, body {
 .custom-nested-list li {
   margin-top: 0px;
   margin-bottom: 0px;
+}
+
+.highlight-style {
+  font-weight: bold;
+  color: var(--highlight-color);
 }
 
 @media (max-width: 600px) {
