--- a/src/styles/globals.module.css
+++ b/src/styles/globals.module.css
@@ -14,6 +14,22 @@
   text-decoration: underline;
 }
 
+.linkBold {
+  color: var(--text-color);
+  font-weight: bold;
+  margin-bottom: 0px;
+  padding: 4px 0;
+}
+
+.linkBold:hover {
+  color: var(--link-color);
+  text-decoration: underline;
+}
+
 .section {
   margin-bottom: 20px;
+}
+
+.publications > ul > li {
+  margin-bottom: 15px;
 }
