--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,8 +37,8 @@ body {
   padding: 0;
   color: var(--text-color);
   background-color: var(--background-color);
-  font-size: 14.5px;
-  line-height: 1.4;
+  font-size: 16px;
+  line-height: 1.5;
 }
 
 html[lang="en"] body {
@@ -120,7 +120,7 @@ html, body {
 
 .custom-list > li {
   margin-top: 0px;
-  margin-bottom: 6px;
+  margin-bottom: 2px;
   margin-left: -19px;
   display: block;
 }
@@ -138,7 +138,6 @@ html, body {
 }
 
 .custom-nested-list > li {
-  margin-top: 3.5px;
   margin-bottom: 0px;
 }
 
@@ -146,13 +145,36 @@ html, body {
   font-weight: bold;
   font-style: italic;
   font-family: 'Lato';
-  font-size: 15px;
+  font-size: 16.5px;
   color: var(--highlight-color);
+}
+
+.venue {
+  font-style: italic;
+  font-family: 'Lato';
+  font-size: 16.5px;
+}
+
+.fa-icon {
+  margin-right: 8px;
+  margin-bottom: -1px;
 }
 
 @media (max-width: 600px) {
   h1 {
     margin-top: -15px;
+  }
+
+  body {
+    font-size: 14px;
+  }
+
+  .highlight-style {
+    font-size: 14.5px;
+  }
+
+  .venue {
+    font-size: 14.5px;
   }
 }
 
