--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -1,3 +1,14 @@
+.gridContainer {
+  margin-top: 30px;
+  width: 100%;
+  min-width: 60vh;
+}
+
+.gridItem {
+  display: flex;
+  justify-content: center
+}
+
 .form {
   padding: 20px;
   background-color: var(--background-color);
