--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -160,6 +160,21 @@ html, body {
   margin-bottom: -1px;
 }
 
+.scroll-to-top-button {
+  position: fixed;
+  bottom: 1.25rem;
+  right: 2rem;
+  padding: 0.5rem;
+  color: var(--main-color);
+  background-color: transparent;
+  border-radius: 9999px;
+  border: none;
+}
+
+.scroll-to-top-button svg {
+  stroke-width: 4px;
+}
+
 @media (max-width: 600px) {
   h1 {
     margin-top: -15px;
