--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -100,6 +100,17 @@ html, body {
   flex: 1;
 }
 
+.link {
+  color: var(--link-color);
+  margin-bottom: 0px;
+  padding: 4px 0;
+}
+
+.link:hover {
+  color: var(--link-color);
+  text-decoration: underline;
+}
+
 .horizontal-line {
   margin-top: 0px;
   margin-bottom: 10px;
