✨ feat: change the design drastically
- green become the base color
- add Home/Education and Home/Experiences
- introduce "section" tag, <section>

--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -10,8 +10,9 @@
 }
 
 .form {
+  border-radius: 8px !important;
   padding: 20px;
-  background-color: var(--background-color);
+  background-color: var(--container-color);
 }
 
 .button {
