🎨 style: change background color of the drawer content

--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -92,7 +92,7 @@
 }
 
 .drawer {
-  background-color: var(--background-color) !important;
+  background-color: var(--container-color) !important;
 }
 
 /* drawerContainer.tsx */
