--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -284,6 +284,17 @@ html, body {
   margin-right: 6px;
 }
 
+.blog {
+  margin-left: 5px !important;
+  margin-bottom: 15px !important;
+}
+
+.blog > h3 {
+  font-weight: 600;
+  margin-bottom: 10px;
+  color: var(--subheading-color);
+}
+
 .publication {
   padding-left: 5px;
   margin-bottom: 20px;
