--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,21 +22,21 @@
 
 [data-theme="dark"] {
   --text-color: #D4D4D4;
-  --background-color: #1a1f25;
-  --container-color: #252b33;
+  --background-color: #191919;
+  --container-color: #262626;
   --button-bg-color: #BE6C15;
   --button-hover-bg-color: #9e520e;
-  --link-color: #68a5a5;
+  --link-color: #6eb5b0;
   --link-hover-color: #FA8174;
   --box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.1);
   --input-border-color: #404040;
   --input-hover-border-color: #CCCCCC;
   --placeholder-color: #B2B2B2;
-  --main-color: #005A42;
+  --main-color: #004d3f;
   --footer-text-color: #535252;
   --drawer-icon-color: #D4D4D4;
   --highlight-color: #E6B64C;
-  --heading-color: #5a9c7f;
+  --heading-color: #68ac78;
   --subheading-color: #6EAE99;
   --component-text-color: #a0aec0;
 }
