💄 style: minor change of design

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,7 +15,7 @@
   --footer-text-color: #A9A9A9;
   --drawer-icon-color: #757575;
   --highlight-color: #CA8A03;
-  --heading-color: #1b5e20;
+  --heading-color: #4A7C6A;
   --subheading-color: #4A7C6A;
   --component-text-color: #4b5563;
 }
