--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -144,36 +144,10 @@ html, body {
 
 .link {
   color: var(--link-color);
-  text-decoration: none;
-  position: relative;
-  vertical-align: baseline;
-  background-image: linear-gradient(var(--link-color), var(--link-color));
-  background-position: 0 100%;
-  background-repeat: no-repeat;
-  background-size: 0% 1.5px;
-  transition: background-size 0.2s ease-in-out;
 }
 
 .link:hover {
-  background-size: 100% 1.5px;
-}
-
-.link::after {
-  content: '';
-  position: absolute;
-  width: 100%;
-  transform: scaleX(0);
-  height: 1.5px;
-  bottom: 0;
-  left: 0;
-  background-color: var(--link-color);
-  transform-origin: bottom right;
-  transition: transform 0.2s ease-out;
-}
-
-.link:hover::after {
-  transform: scaleX(1);
-  transform-origin: bottom left;
+  text-decoration: underline;
 }
 
 .italic {
@@ -342,21 +316,9 @@ ul.news > li {
   margin-bottom: 12px;
 }
 
-.author-list {
-  margin-bottom: 5px;
-  color: var(--component-text-color);
-  align-items: center
-}
-
 .award {
-  margin-top: 8px;
   display: flex;
   align-items: center;
-}
-
-.award-icon {
-  font-size: 22px;
-  margin-right: 4px;
 }
 
 .highlight {
@@ -377,12 +339,7 @@ ul.news > li {
 }
 
 .venue-name {
-  font-style: italic;
   font-family: 'Lato';
-}
-
-.resources {
-  margin-top: 2px;
 }
 
 .fa-download {
@@ -454,10 +411,6 @@ ul.news > li {
 
   .highlight {
     font-size: 15px;
-  }
-
-  .award-icon {
-    font-size: 19px;
   }
 
   .venue {
