--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,11 +19,11 @@
   --heading-color: #4A7C6A;
   --subheading-color: #4A7C6A;
   --component-text-color: #4b5563;
-  --horizontal-line: #4A7C6A;
+  --horizontal-line: #95baad;
 }
 
 [data-theme="dark"] {
-  --text-color: #f1f1f1;
+  --text-color: #d3d3d3;
   --background-color: #1d1f1d;
   --container-color: #2f2f2f;
   --button-bg-color: #BE6C15;
@@ -39,10 +39,10 @@
   --drawer-icon-color: #D4D4D4;
   --highlight-color: #E6B64C;
   --highlight-hover-color: #c0973e;
-  --heading-color: #f1f1f1;
-  --subheading-color: #f1f1f1;
-  --component-text-color: #c5d0dc;
-  --horizontal-line: #808080;
+  --heading-color: #d3d3d3;
+  --subheading-color: #d3d3d3;
+  --component-text-color: #d3d3d3;
+  --horizontal-line: #585b5b;
 }
 
 body {
@@ -359,11 +359,11 @@ html, body {
 /* ===== components ===== */
 .horizontal-line {
   background-color: var(--horizontal-line);
-  margin-top: 22px;
-  margin-bottom: 18px;
+  margin-top: 0px;
+  margin-bottom: 15px;
   margin-left: 0px;
   width: 100%;
-  height: 2.5px;
+  height: 3.0px;
 }
 
 .horizontal-subline {
